--- a/.github/workflows/daily-support-matrix.yml
+++ b/.github/workflows/daily-support-matrix.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   update-support-matrix:
     name: Update Support Matrix
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     timeout-minutes: 480 # 8 hours
     permissions:
       contents: write
